# qp_wrappers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGUROBI.cmake
example/: linear_regression.cpp
example/cplex/: cplex_multiple_times.cpp
example/general_qp_solver/: solver.cpp
example/general_qp_solver/data/: ex1
example/gurobi/: gurobi_multiple_times.cpp
example/linear_regression/: linear_regression.cpp
example/linear_regression/data/: ex1
example/mpc/: mpc_solver.cpp
example/osqp/: osqp_multiple_times.cpp
example/qpoases/: qpoases_multiple_times.cpp
include/qp_wrappers/: alglib.hpp  cgal.hpp  cplex.hpp  gurobi.hpp  gurobi_c.h  osqp.hpp  problem.hpp  qpoases.hpp  types.hpp
